traces/bug_315.txt
src/medit/inout_morice.c:280: error: DEAD_STORE
  The value written to &keyseE (type char[3*1](&)) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:280:3: Write of unused value
278.     int     i;
279.     int     lench;
280.     char    keyseE[]="eE"; 
         ^
281.     char    keyse[]="e"; 
282.   
